--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -12,10 +12,10 @@ parser.subcatFactoryClass=danbikel.parser.SubcatBagFactory
 parser.headfinder.warnDefaultRule=false
 #
 # settings for danbikel.parser.Training
-parser.training.addgapinfo=true
+parser.training.addgapinfo=false
 #
 # settings for danbikel.parser.Trainer
-parser.trainer.unknownWordThreshold=3
+parser.trainer.unknownWordThreshold=5
 parser.trainer.reportingInterval=100
 parser.trainer.numPrevMods=1
 parser.trainer.keepAllWords=false
@@ -23,8 +23,10 @@ parser.trainer.globalModelStructureNumber=1
 #
 # settings for danbikel.parser.Decoder
 parser.decoder.useCellLimit=false
+parser.decoder.cellLimit=25
 parser.decoder.usePruneFactor=true
 parser.decoder.pruneFactor=9.2103404
+parser.decoder.useCommaConstraint=true
 #
 #
 # settings specific to language package danbikel.parser.english
@@ -35,7 +37,7 @@ parser.training.metadata.english=data/training-metadata.lisp
 #
 # settings for the switchboard and its users
 switchboard.socketTimeout=120000
-switchboard.keepAliveInterval=5000
+switchboard.keepAliveInterval=30000
 switchboard.keepAliveMaxRetries=0
 switchboard.serverDeathKillClients=false
 switchboard.client.nextObjectInterval=5000
