Added default settings for caches sizes for use by the ProbabilityStructure and Model classes.

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -49,3 +49,16 @@ parser.switchboardUser.sbMaxRetries=0
 parser.switchboardUser.client.serverFailover=true
 parser.switchboardUser.client.serverMaxRetries=1
 parser.switchboardUser.client.serverRetrySleep=1000
+#
+# cache settings for the model structure classes
+#
+danbikel.parser.GapModelStructure1.topLevelCacheSize=10000
+danbikel.parser.HeadModelStructure1.topLevelCacheSize=25000
+danbikel.parser.LeftSubcatModelStructure1.topLevelCacheSize=25000
+danbikel.parser.RightSubcatModelStructure1.topLevelCacheSize=25000
+danbikel.parser.ModNonterminalModelStructure1.topLevelCacheSize=100000
+danbikel.parser.ModWordModelStructure1.topLevelCacheSize=100000
+danbikel.parser.TopLexModelStructure1.topLevelCacheSize=1000
+danbikel.parser.TopNonterminalModelStructure1.topLevelCacheSize=1000
+danbikel.parser.LexPriorModelStructure1.topLevelCacheSize=5000
+danbikel.parser.NonterminalPriorModelStructure1.topLevelCacheSize=10000
