Changed default prune factor to be log-base-10-based.

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -25,7 +25,7 @@ parser.trainer.globalModelStructureNumber=1
 parser.decoder.useCellLimit=false
 parser.decoder.cellLimit=25
 parser.decoder.usePruneFactor=true
-parser.decoder.pruneFactor=9.2103404
+parser.decoder.pruneFactor=4
 parser.decoder.useCommaConstraint=true
 #
 #
