Added precompute probabilities setting. Added comment-out settings to enable the Collins '97 model, which still needs some debugging.

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -3,10 +3,14 @@
 #
 parser.language=english
 parser.language.package=danbikel.parser.english
+#parser.language.wordFeatures=danbikel.parser.english.SimpleWordFeatures
 parser.file.encoding.english=ISO-8859-1
 parser.file.encoding.chinese=GB2312
 parser.downcaseWords=true
 parser.subcatFactoryClass=danbikel.parser.SubcatBagFactory
+#
+# settings for danbikel.parser.Model
+parser.model.precomputeProbabilities=true
 #
 # settings for danbikel.parser.HeadFinder
 parser.headfinder.warnDefaultRule=false
@@ -20,6 +24,8 @@ parser.trainer.reportingInterval=100
 parser.trainer.numPrevMods=1
 parser.trainer.keepAllWords=false
 parser.trainer.globalModelStructureNumber=1
+#parser.trainer.modNonterminalModelStructureNumber=2
+#parser.trainer.modWordModelStructureNumber=2
 #
 # settings for danbikel.parser.Decoder
 parser.decoder.useCellLimit=false
