Added definition of new parser.chart.itemClass property (see description for the Settings.chartItemClass data member).

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -27,6 +27,10 @@ parser.trainer.globalModelStructureNumber=1
 #parser.trainer.modNonterminalModelStructureNumber=2
 #parser.trainer.modWordModelStructureNumber=2
 #
+# settings for danbikel.parser.CKYChart
+parser.chart.itemClass=danbikel.parser.CKYItem
+#parser.chart.itemClass=danbikel.parser.CKYItem$PrevModIsStart
+#
 # settings for danbikel.parser.Decoder
 parser.decoder.useCellLimit=false
 parser.decoder.cellLimit=25
