Added definition of new parser.modelCollection.writeCanonicalEvents property.

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -12,6 +12,11 @@ parser.subcatFactoryClass=danbikel.parser.SubcatBagFactory
 # settings for danbikel.parser.Model
 parser.model.precomputeProbabilities=true
 #
+# settings for danbikel.parser.ModelCollection
+#    the following property is ignored when
+#    danbikel.model.precomputeProbabilities is true
+parser.modelCollection.writeCanonicalEvents=true
+#
 # settings for danbikel.parser.HeadFinder
 parser.headfinder.warnDefaultRule=false
 #
