Added parser.trainer.countThreshold property.

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -25,6 +25,7 @@ parser.training.addgapinfo=false
 #
 # settings for danbikel.parser.Trainer
 parser.trainer.unknownWordThreshold=5
+parser.trainer.countThreshold=1
 parser.trainer.reportingInterval=100
 parser.trainer.numPrevMods=1
 parser.trainer.keepAllWords=false
@@ -38,7 +39,7 @@ parser.chart.itemClass=danbikel.parser.CKYItem
 #
 # settings for danbikel.parser.Decoder
 parser.decoder.useCellLimit=false
-parser.decoder.cellLimit=25
+parser.decoder.cellLimit=10
 parser.decoder.usePruneFactor=true
 parser.decoder.pruneFactor=4
 parser.decoder.useCommaConstraint=true
