Added numPrevWords and maxSentenceLength defaults.

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -3,7 +3,6 @@
 #
 parser.language=english
 parser.language.package=danbikel.parser.english
-#parser.language.wordFeatures=danbikel.parser.english.SimpleWordFeatures
 parser.file.encoding.english=ISO-8859-1
 parser.file.encoding.chinese=GB2312
 parser.downcaseWords=true
@@ -28,16 +27,15 @@ parser.trainer.unknownWordThreshold=5
 parser.trainer.countThreshold=1
 parser.trainer.reportingInterval=100
 parser.trainer.numPrevMods=1
+parser.trainer.numPrevWords=1
 parser.trainer.keepAllWords=false
 parser.trainer.globalModelStructureNumber=1
-#parser.trainer.modNonterminalModelStructureNumber=2
-#parser.trainer.modWordModelStructureNumber=2
 #
 # settings for danbikel.parser.CKYChart
 parser.chart.itemClass=danbikel.parser.CKYItem
-#parser.chart.itemClass=danbikel.parser.CKYItem$PrevModIsStart
 #
 # settings for danbikel.parser.Decoder
+parser.decoder.maxSentenceLength=100
 parser.decoder.useCellLimit=false
 parser.decoder.cellLimit=10
 parser.decoder.usePruneFactor=true
