Set downcaseWords to false as new default.

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -5,7 +5,7 @@ parser.language=english
 parser.language.package=danbikel.parser.english
 parser.file.encoding.english=ISO-8859-1
 parser.file.encoding.chinese=GB2312
-parser.downcaseWords=true
+parser.downcaseWords=false
 parser.subcatFactoryClass=danbikel.parser.SubcatBagFactory
 #
 # settings for danbikel.parser.Model
