Added -DDB flag to evalb target, to incorporate Dan Bikel's source code modifications.

--- a/scorer/Makefile
+++ b/scorer/Makefile
@@ -1,4 +1,4 @@
 all: evalb
 
 evalb: evalb.c
-	gcc -DDC -Wall -funsigned-char -g -o evalb evalb.c
+	gcc -DDC -DDB -Wall -funsigned-char -g -o evalb evalb.c
