* Added default definitions for the following new settings: 	parser.shifterClass 	parser.constraintSetFactoryClass 	parser.model.collinsDeficientEstimation 	parser.training.collinsRepairBaseNPs 	parser.trainer.keepLowFreqTags 	parser.trainer.collinsSkipWSJSentences 	parser.decoder.useLowFreqTags
* The setting
	parser.training.addgapinfo
has been changed to be
	parser.training.addGapInfo
so as to be consistent with the InterCap of the other settings.

* Added default definitions for the settings specific to language package
danbikel.parser.chinese
	parser.wordfeatures.chinese.useUnderscores
	parser.headtable.chinese
	parser.training.metadata.chinese

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -7,9 +7,12 @@ parser.file.encoding.english=ISO-8859-1
 parser.file.encoding.chinese=GB2312
 parser.downcaseWords=false
 parser.subcatFactoryClass=danbikel.parser.SubcatBagFactory
+parser.shifterClass=danbikel.parser.DefaultShifter
+parser.constraintSetFactoryClass=danbikel.parser.UnlexTreeConstraintSetFactory
 #
 # settings for danbikel.parser.Model
 parser.model.precomputeProbabilities=true
+parser.model.collinsDeficientEstimation=false
 #
 # settings for danbikel.parser.ModelCollection
 #    the following property is ignored when
@@ -20,7 +23,8 @@ parser.modelCollection.writeCanonicalEvents=true
 parser.headfinder.warnDefaultRule=false
 #
 # settings for danbikel.parser.Training
-parser.training.addgapinfo=false
+parser.training.addGapInfo=false
+parser.training.collinsRepairBaseNPs=false
 #
 # settings for danbikel.parser.Trainer
 parser.trainer.unknownWordThreshold=5
@@ -29,13 +33,16 @@ parser.trainer.reportingInterval=100
 parser.trainer.numPrevMods=1
 parser.trainer.numPrevWords=1
 parser.trainer.keepAllWords=false
+parser.trainer.keepLowFreqTags=false
 parser.trainer.globalModelStructureNumber=1
+parser.trainer.collinsSkipWSJSentences=false
 #
 # settings for danbikel.parser.CKYChart
 parser.chart.itemClass=danbikel.parser.CKYItem
 #
 # settings for danbikel.parser.Decoder
 parser.decoder.maxSentenceLength=100
+parser.decoder.useLowFreqTags=false
 parser.decoder.useCellLimit=false
 parser.decoder.cellLimit=10
 parser.decoder.usePruneFactor=true
@@ -48,6 +55,13 @@ parser.decoder.useCommaConstraint=true
 parser.wordfeatures.english.useUnderscores=true
 parser.headtable.english=data/head-rules.lisp
 parser.training.metadata.english=data/training-metadata.lisp
+#
+#
+# settings specific to language pakcage danbikel.parser.chinese
+#
+parser.wordfeatures.chinese.useUnderscores=true
+parser.headtable.chinese=data/head-rules.lisp
+parser.training.metadata.chinese=data/training-metadata.lisp
 #
 # settings for the switchboard and its users
 switchboard.socketTimeout=120000
