Added default value for new setting parser.training.collinsRelabelHeadChildrenAsArgs.

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -24,6 +24,7 @@ parser.headfinder.warnDefaultRule=false
 #
 # settings for danbikel.parser.Training
 parser.training.addGapInfo=false
+parser.training.collinsRelabelHeadChildrenAsArgs=true
 parser.training.collinsRepairBaseNPs=false
 #
 # settings for danbikel.parser.Trainer
