Added value for new setting parser.training.collinsRelabelHeadChildrenAsArgs. The value is, of course, true.

--- a/settings/collins.properties
+++ b/settings/collins.properties
@@ -19,6 +19,7 @@ parser.modelCollection.writeCanonicalEvents=true
 #
 # settings for danbikel.parser.Training
 parser.training.addGapInfo=false
+parser.training.collinsRelabelHeadChildrenAsArgs=true
 parser.training.collinsRepairBaseNPs=true
 #
 # settings for danbikel.parser.Trainer
