Added definition for new setting, parser.chart.collinsNPPruneHack (see CKYChart for details).

--- a/settings/collins.properties
+++ b/settings/collins.properties
@@ -37,6 +37,7 @@ parser.trainer.modWordModelStructureNumber=2
 #
 # settings for danbikel.parser.CKYChart
 parser.chart.itemClass=danbikel.parser.CKYItem$MappedPrevModBaseNPAware
+parser.chart.collinsNPPruneHack=true
 #
 # settings for danbikel.parser.Decoder
 parser.decoder.useLowFreqTags=true
