Added definition for new setting parser.chart.collinsNPPruneHack (see CKYChart for details).

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -40,6 +40,7 @@ parser.trainer.collinsSkipWSJSentences=false
 #
 # settings for danbikel.parser.CKYChart
 parser.chart.itemClass=danbikel.parser.CKYItem
+parser.chart.collinsNPPruneHack=false
 #
 # settings for danbikel.parser.Decoder
 parser.decoder.maxSentenceLength=100
