Added switchboard.sortOutput default setting (true).

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -70,6 +70,7 @@ switchboard.socketTimeout=120000
 switchboard.keepAliveInterval=30000
 switchboard.keepAliveMaxRetries=5
 switchboard.serverDeathKillClients=false
+switchboard.sortOutput=true
 switchboard.client.nextObjectInterval=5000
 #
 # settings for the switchboard user implementations of the
