--- a/settings/collins.properties
+++ b/settings/collins.properties
@@ -46,6 +46,7 @@ parser.decoder.cellLimit=10
 parser.decoder.usePruneFactor=true
 parser.decoder.pruneFactor=4
 parser.decoder.useCommaConstraint=true
+parser.decoder.useHeadToParentMap=true
 #
 #
 # settings specific to language package danbikel.parser.english
