Added several new default settings.

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -7,8 +7,13 @@ parser.file.encoding.english=ISO-8859-1
 parser.file.encoding.chinese=GB2312
 parser.downcaseWords=false
 parser.subcatFactoryClass=danbikel.parser.SubcatBagFactory
+parser.wordFactoryClass=danbikel.parser.DefaultWordFactory
 parser.shifterClass=danbikel.parser.DefaultShifter
 parser.constraintSetFactoryClass=danbikel.parser.UnlexTreeConstraintSetFactory
+parser.baseNPsCannotContainVerbs=true
+#
+# settings for danbikel.parser.Parser
+parser.parser.decoderServerClass=danbikel.parser.DecoderServer
 #
 # settings for danbikel.parser.Model
 parser.model.precomputeProbabilities=true
@@ -28,8 +33,10 @@ parser.training.collinsRelabelHeadChildrenAsArgs=false
 parser.training.collinsRepairBaseNPs=false
 #
 # settings for danbikel.parser.Trainer
+parser.trainer.shareCounts=true
 parser.trainer.unknownWordThreshold=5
-parser.trainer.countThreshold=1
+parser.trainer.countThreshold=0.0
+parser.trainer.derivedCountThreshold=0.0
 parser.trainer.reportingInterval=100
 parser.trainer.numPrevMods=1
 parser.trainer.numPrevWords=1
@@ -44,12 +51,18 @@ parser.chart.collinsNPPruneHack=false
 #
 # settings for danbikel.parser.Decoder
 parser.decoder.maxSentenceLength=100
+parser.decoder.maxParseTime=0
 parser.decoder.useLowFreqTags=false
 parser.decoder.useCellLimit=false
 parser.decoder.cellLimit=10
 parser.decoder.usePruneFactor=true
 parser.decoder.pruneFactor=4
 parser.decoder.useCommaConstraint=true
+parser.decoder.useOnlyGivenTags=false
+parser.decoder.outputHeadLexicalizedLabels=false
+parser.decoder.useLocalProbabilityCache=false
+parser.decoder.localProbabilityCacheSize=50000
+parser.decoder.useHeadToParentMap=false
 #
 #
 # settings specific to language package danbikel.parser.english
@@ -68,10 +81,10 @@ parser.training.metadata.chinese=data/training-metadata.lisp
 # settings for the switchboard and its users
 switchboard.socketTimeout=120000
 switchboard.keepAliveInterval=30000
-switchboard.keepAliveMaxRetries=5
+switchboard.keepAliveMaxRetries=3
 switchboard.serverDeathKillClients=false
 switchboard.sortOutput=true
-switchboard.client.nextObjectInterval=5000
+switchboard.client.nextObjectInterval=60000
 #
 # settings for the switchboard user implementations of the
 #     danbikel.parser package
