Added the following new settings: 	parser.decoder.substituteWordsForClosedClassTags 	switchboard.policyFile 	switchboard.disableHttp 	switchboard.client.policyFile 	switchboard.client.disableHttp 	switchboard.server.policyFile 	switchboard.server.disableHttp

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -53,6 +53,7 @@ parser.chart.collinsNPPruneHack=false
 parser.decoder.maxSentenceLength=100
 parser.decoder.maxParseTime=0
 parser.decoder.useLowFreqTags=false
+parser.decoder.substituteWordsForClosedClassTags=false
 parser.decoder.useCellLimit=false
 parser.decoder.cellLimit=10
 parser.decoder.usePruneFactor=true
@@ -84,7 +85,13 @@ switchboard.keepAliveInterval=30000
 switchboard.keepAliveMaxRetries=3
 switchboard.serverDeathKillClients=false
 switchboard.sortOutput=true
+switchboard.policyFile=policy/switchboard.policy
+switchboard.disableHttp=true
 switchboard.client.nextObjectInterval=60000
+switchboard.client.policyFile=policy/client.policy
+switchboard.client.disableHttp=true
+switchboard.server.policyFile=policy/server.policy
+switchboard.server.disableHttp=true
 #
 # settings for the switchboard user implementations of the
 #     danbikel.parser package
