--- a/build.xml
+++ b/build.xml
@@ -141,6 +141,28 @@ and the Ant output directory might be "classes.ant".-->
   <target depends="archive,resource" name="package"/>
   <target depends="precompile,compile,postcompile,package" name="build"/>
   <target depends="clean,build" name="rebuild"/>
+  <target name="create_install_header">
+    <loadfile property="license.file" srcFile="${deploy}/LICENSE"/>
+    <exec executable="perl"
+          outputproperty="install.script.linecount">
+      <arg value="-e"/>
+      <arg value="while (&lt;&gt;) {} print &quot;$.\n&quot;;"/>
+      <arg value="${deploy}/LICENSE"/>
+      <arg value="${deploy}/install-header-template"/>
+    </exec>
+    <copy file="${deploy}/install-header-template"
+          tofile="${deploy.install.header}"
+	  overwrite="true">
+      <filterchain>
+        <replacetokens>
+          <token key="LICENSE" value="${license.file}"/>
+        </replacetokens>
+	<replacetokens>
+          <token key="LINES" value="${install.script.linecount}"/>
+        </replacetokens>
+      </filterchain>
+    </copy>
+  </target>
   <target name="ln_deploy_readme" unless="readme.ln.present">
     <echo message="Creating symbolic link from ${deploy.to}/README to ${deploy.to}/userguide/README"/>
     <exec dir="${deploy.to}" executable="ln">
