Changed perl execution expression so that it doesn't print a newline character after the number of lines of the to-be-created install-header file, because the newline is stripped away anyway when the output of the perl process is put into the install.script.linecount property.

--- a/build.xml
+++ b/build.xml
@@ -146,7 +146,7 @@ and the Ant output directory might be "classes.ant".-->
     <exec executable="perl"
           outputproperty="install.script.linecount">
       <arg value="-e"/>
-      <arg value="while (&lt;&gt;) {} $lines=$.+1;print &quot;$lines\n&quot;;"/>
+      <arg value="while (&lt;&gt;) {} $lines=$.+1;print $lines;"/>
       <arg value="${deploy}/LICENSE"/>
       <arg value="${deploy}/install-header-template"/>
     </exec>
