--- a/build.xml
+++ b/build.xml
@@ -119,7 +119,7 @@ and the Ant output directory might be "classes.ant".-->
 	     windowtitle="Dan Bikel's Utility Packages"
 	     doctitle="Dan Bikel's Utility Packages"
 	     header="Utility Packages"
-	     bottom="&quot;Author: &lt;a href=\&quot;http://www.cis.upenn.edu/~dbikel/\&quot;&gt;Dan Bikel.&lt;/a&gt;&quot;"
+	     bottom="Author: &lt;a href=&quot;http://www.cis.upenn.edu/~dbikel/&quot;&gt;Dan Bikel.&lt;/a&gt;"
 	     additionalparam="-breakiterator">
       <link href="http://java.sun.com/j2se/1.4.2/docs/api"/>
       <fileset dir="${src}"/>
@@ -132,7 +132,7 @@ and the Ant output directory might be "classes.ant".-->
 	     windowtitle="Dan Bikel's Parser"
 	     doctitle="Dan Bikel's Parser"
 	     header="Parser"
-	     bottom="&quot;Author: &lt;a href=\&quot;http://www.cis.upenn.edu/~dbikel/\&quot;&gt;Dan Bikel.&lt;/a&gt;&quot;"
+	     bottom="Author: &lt;a href=&quot;http://www.cis.upenn.edu/~dbikel/&quot;&gt;Dan Bikel.&lt;/a&gt;"
 	     additionalparam="-breakiterator">
       <link href="http://java.sun.com/j2se/1.4.2/docs/api"/>
       <fileset dir="${src}"/>
