Added explicit definition of parser.file.encoding.chinese, even though this setting is contained in default-settings.properties.

--- a/settings/chinese.properties
+++ b/settings/chinese.properties
@@ -5,6 +5,7 @@
 parser.language=chinese
 parser.language.package=danbikel.parser.chinese
 parser.language.wordFeatures=danbikel.parser.chinese.SimpleWordFeatures
+parser.file.encoding.chinese=GB2312
 parser.downcaseWords=false
 parser.subcatFactoryClass=danbikel.parser.SubcatBagFactory
 parser.shifterClass=danbikel.parser.BaseNPAwareShifter
