Adding following defaults: parser.trainer.maxEventChunkSize=500000 parser.trainer.outputHeadToParentMap=false parser.trainer.outputSubcatMaps=false parser.trainer.outputModNonterminalMap=false
The first controls how many observations to read at a time from a really huge observations
file (when using new, second "-l" option from command line, as handled by updated
Trainer.main method).

The latter three defaults say that the trainer should not output various derived maps.

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -44,6 +44,10 @@ parser.trainer.keepAllWords=false
 parser.trainer.keepLowFreqTags=false
 parser.trainer.globalModelStructureNumber=1
 parser.trainer.collinsSkipWSJSentences=false
+parser.trainer.maxEventChunkSize=500000
+parser.trainer.outputHeadToParentMap=false
+parser.trainer.outputSubcatMaps=false
+parser.trainer.outputModNonterminalMap=false
 #
 # settings for danbikel.parser.CKYChart
 parser.chart.itemClass=danbikel.parser.CKYItem
