Added patternset for everything in src directory that should be placed into the src directory of the deploy directory.  Will include this patternset in list of files to copy to deploy once I figure out how to prepend a short version of the license to each source file.

--- a/build.xml
+++ b/build.xml
@@ -21,7 +21,12 @@ and the Ant output directory might be "classes.ant".-->
     <include name="bin/no-cp-rmiregistry"/>
     <include name="bin/train"/>
     <include name="bin/wrapper"/>
-  </patternset>		   
+  </patternset>
+  <patternset id="src.and.resources">
+    <include name="${src}/**/*.java"/>
+    <include name="${src}/**/*.properties"/>
+    <include name="${src}/**/*.lisp"/>
+  </patternset>	   
   <patternset id="deploy.files">
     <patternset refid="deploy.bin.files"/>
     <include name="settings/**"/>
