Now includes overview option in javadoc target for entire project, to include overview.html that is just inside src directory.

--- a/build.xml
+++ b/build.xml
@@ -144,6 +144,7 @@ and the Ant output directory might be "classes.ant".-->
     <javadoc destdir="doc"
              protected="true"
 	     use="true"
+	     overview="${src}/overview.html"
 	     windowtitle="Dan Bikel's Parser"
 	     doctitle="Dan Bikel's Parser"
 	     header="Parser"
