Added default settins for four new settings.

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -13,7 +13,11 @@ parser.constraintSetFactoryClass=danbikel.parser.constraints.UnlexTreeConstraint
 parser.baseNPsCannotContainVerbs=true
 #
 # settings for danbikel.parser.Parser
+parser.parser.decoderClass=danbikel.parser.Decoder
 parser.parser.decoderServerClass=danbikel.parser.DecoderServer
+#
+# settings for danbikel.parser.ProbabilityStructure
+parser.probabilityStructure.defaultModelClass=danbikel.parser.Model
 #
 # settings for danbikel.parser.Model
 parser.model.precomputeProbabilities=true
@@ -48,12 +52,14 @@ parser.trainer.maxEventChunkSize=500000
 parser.trainer.outputHeadToParentMap=false
 parser.trainer.outputSubcatMaps=false
 parser.trainer.outputModNonterminalMap=false
+parser.trainer.outputCollins=false
 #
 # settings for danbikel.parser.CKYChart
 parser.chart.itemClass=danbikel.parser.CKYItem
 parser.chart.collinsNPPruneHack=false
 #
 # settings for danbikel.parser.Decoder
+parser.decoder.kBest=1
 parser.decoder.maxSentenceLength=100
 parser.decoder.maxParseTime=0
 parser.decoder.useLowFreqTags=false
