--- a/build.xml
+++ b/build.xml
@@ -1,30 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--Exported by JBuilder on Aug 21, 2003 4:00:14 PM-->
-<!--It is RECOMMENDED that JBuildr builds and Ant builds done with
-this exported Ant file be kept separate and be written to different
-directories. For example, the JBuilder output directory might be "classes"
-and the Ant output directory might be "classes.ant".-->
 <project basedir="." default="rebuild" name="dbparser.jpx">
   <property name="dest" value="classes.ant"/>
   <property name="src" value="src"/>
   <property name="deploy" value="deploy"/>
-  <patternset id="deploy.bin.files">
-    <include name="bin/addFakePos"/>
-    <include name="bin/internal-server-run"/>
-    <include name="bin/kill-node-procs"/>
-    <include name="bin/parse"/>
-    <include name="bin/prettyPrint"/>
-    <include name="bin/print-node-procs"/>
-    <include name="bin/score"/>
-    <include name="bin/start-client"/>
-    <include name="bin/start-rmiregistry"/>
-    <include name="bin/no-cp-rmiregistry"/>
-    <include name="bin/train"/>
-    <include name="bin/wrapper"/>
-  </patternset>
-  <property name="deploy.custom.tasks" value="${deploy}/custom-ant-tasks"/>
-  <property name="deploy.custom.tasks.src" value="${deploy.custom.tasks}/src"/>
-  <property name="deploy.custom.tasks.dest" value="${deploy.custom.tasks}/classes"/>
   <patternset id="src.files">
     <include name="${src}/**/*.java"/>
   </patternset>
@@ -34,24 +12,6 @@ and the Ant output directory might be "classes.ant".-->
   <patternset id="lisp.files">
     <include name="${src}/**/*.lisp"/>
   </patternset>	   
-  <patternset id="deploy.files">
-    <patternset refid="deploy.bin.files"/>
-    <include name="settings/**"/>
-    <exclude name="settings/broken*"/>
-    <include name="doc/**"/>
-    <include name="userguide/README"/>
-    <include name="userguide/guide.pdf"/>
-    <include name="policy-files/**"/>
-    <include name="scorer/**"/>
-  </patternset>
-  <property name="deploy.to" value="${deploy}/dbparser"/>
-  <property name="deploy.tar" value="${deploy}/dbparser.tgz"/>
-  <property name="deploy.license" value="${deploy}/LICENSE"/>
-  <property name="deploy.short.license" value="${deploy}/short-license"/>
-  <property name="deploy.install.header.template"
-            value="${deploy}/install-header-template"/>
-  <property name="deploy.install.header" value="${deploy}/install-header"/>
-  <property name="deploy.install.script" value="${deploy}/install.sh"/>
   <property name="Generated.Source" value="${dest}/Temporary_Files"/>
   <path id="project.class.path">
     <pathelement location="${dest}"/>
@@ -193,11 +153,62 @@ and the Ant output directory might be "classes.ant".-->
     </exec>
   </target>
   <target name="build_deploy_tasks">
+    <property name="deploy.custom.tasks" value="${deploy}/custom-ant-tasks"/>
+    <property name="deploy.custom.tasks.src"
+              value="${deploy.custom.tasks}/src"/>
+    <property name="deploy.custom.tasks.dest"
+              value="${deploy.custom.tasks}/classes"/>
     <mkdir dir="${deploy.custom.tasks.dest}"/>
     <javac debug="true" deprecation="true" destdir="${deploy.custom.tasks.dest}"
            nowarn="false">
       <src path="${deploy.custom.tasks.src}"/>
     </javac>
+  </target>
+  <target name="setup_deploy_properties_common">
+    <patternset id="deploy.bin.files">
+      <include name="bin/addFakePos"/>
+      <include name="bin/internal-server-run"/>
+      <include name="bin/kill-node-procs"/>
+      <include name="bin/parse"/>
+      <include name="bin/prettyPrint"/>
+      <include name="bin/print-node-procs"/>
+      <include name="bin/score"/>
+      <include name="bin/start-client"/>
+      <include name="bin/start-rmiregistry"/>
+      <include name="bin/no-cp-rmiregistry"/>
+      <include name="bin/train"/>
+      <include name="bin/wrapper"/>
+    </patternset>
+    <patternset id="deploy.files">
+      <patternset refid="deploy.bin.files"/>
+      <include name="settings/**"/>
+      <exclude name="settings/broken*"/>
+      <include name="doc/**"/>
+      <include name="userguide/README"/>
+      <include name="userguide/guide.pdf"/>
+      <include name="policy-files/**"/>
+      <include name="scorer/**"/>
+    </patternset>
+    <property name="deploy.short.license" value="${deploy}/short-license"/>
+    <property name="deploy.install.header.template"
+              value="${deploy}/install-header-template"/>
+    <property name="deploy.install.header" value="${deploy}/install-header"/>
+    <property name="deploy.to.tail" value="dbparser"/>
+  </target>
+  <target depends="setup_deploy_properties_common"
+          name="setup_deploy_properties_academic">
+    <property name="deploy.to" value="${deploy}/academic/${deploy.to.tail}"/>
+    <property name="deploy.tgz" value="${deploy}/academic/dbparser.tgz"/>
+    <property name="deploy.install.script" value="${deploy.to}/../install.sh"/>
+    <property name="deploy.license" value="${deploy}/LICENSE"/>
+  </target>
+  <target depends="setup_deploy_properties_common"
+          name="setup_deploy_properties_commercial">
+    <property name="deploy.to" value="${deploy}/commercial/${deploy.to.tail}"/>
+    <property name="deploy.tgz" value="${deploy}/commercial/dbparser.tgz"/>
+    <property name="deploy.install.script"
+              value="${deploy.to}/../install-commercial.sh"/>
+    <property name="deploy.license" value="${deploy}/LICENSE.commercial"/>
   </target>
   <target depends="build_deploy_tasks" name="deploy_sources_and_resources">
     <!-- create versions of short license for inclusion in source code,
@@ -294,25 +305,53 @@ and the Ant output directory might be "classes.ant".-->
     </chmod>
     <available file="${deploy.to}/README" property="readme.ln.present"/>
     <copy todir="${deploy.to}" file="${deploy.license}"/>
-    <antcall target="deploy_sources_and_resources"/>
   </target>
-  <target depends="rebuild,javadoc,setup_deploy,ln_deploy_readme,create_install_header" name="deploy">
+  <target name="create_install_script">
     <!-- Can't use tar task: Ant filesets don't respect symbolic links -->
     <!--
-    <tar destfile="${deploy.tar}" basedir="${deploy}" compression="gzip"
+    <tar destfile="${deploy.tgz}" basedir="${deploy}" compression="gzip"
          includes="dbparser/"/>
     -->
-    <exec dir="${deploy}" executable="tar">
+    <exec dir="${deploy.to}/.." executable="tar">
 	  <arg value="cvf"/>
 	  <arg value="dbparser.tar"/>
-	  <arg value="dbparser"/>
+	  <arg value="${deploy.to.tail}"/>
     </exec>
-    <gzip src="${deploy}/dbparser.tar" zipfile="${deploy}/dbparser.tgz"/>
+    <gzip src="${deploy.to}/../dbparser.tar" zipfile="${deploy.tgz}"/>
     <concat destfile="${deploy.install.script}">
       <filelist dir="."
-	        files="${deploy.install.header} ${deploy.tar}"/>
+	        files="${deploy.install.header} ${deploy.tgz}"/>
     </concat>
     <chmod perm="ogu+x" file="${deploy.install.script}"/>
+  </target>
+  <target depends="rebuild,javadoc" name="deploy_rebuild">
+  </target>
+  <target depends="setup_deploy_properties_academic,
+                   setup_deploy,
+		   deploy_sources_and_resources,
+		   ln_deploy_readme,
+		   create_install_header,
+		   create_install_script"
+          name="deploy_academic_depends">
+  </target>
+  <target depends="setup_deploy_properties_commercial,
+                   setup_deploy,
+		   ln_deploy_readme,
+		   create_install_header,
+		   create_install_script"
+          name="deploy_commercial_depends">
+  </target>
+  <target depends="deploy_rebuild,
+                   deploy_academic_depends"
+	  name="deploy_academic">
+  </target>
+  <target depends="deploy_rebuild,
+                   deploy_commercial_depends"
+	  name="deploy_commercial">
+  </target>
+  <target depends="deploy_rebuild" name="deploy">
+    <antcall target="deploy_academic_depends"/>
+    <antcall target="deploy_commercial_depends"/>
   </target>
   <target name="init">
     <mkdir dir="${dest}"/>
