Changed default setting for parser.trainer.shareCounts from "true" to "false", since we now have a new scheme that doesn't require count sharing (with preterminal head-generation events output by trainer).

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -37,7 +37,7 @@ parser.training.collinsRelabelHeadChildrenAsArgs=false
 parser.training.collinsRepairBaseNPs=false
 #
 # settings for danbikel.parser.Trainer
-parser.trainer.shareCounts=true
+parser.trainer.shareCounts=false
 parser.trainer.unknownWordThreshold=5
 parser.trainer.countThreshold=0.0
 parser.trainer.derivedCountThreshold=0.0
