--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -22,6 +22,7 @@ parser.probabilityStructure.defaultModelClass=danbikel.parser.Model
 # settings for danbikel.parser.Model
 parser.model.precomputeProbabilities=true
 parser.model.collinsDeficientEstimation=false
+parser.model.doPruning=false
 #
 # settings for danbikel.parser.ModelCollection
 #    the following property is ignored when
@@ -69,11 +70,12 @@ parser.decoder.cellLimit=10
 parser.decoder.usePruneFactor=true
 parser.decoder.pruneFactor=4
 parser.decoder.useCommaConstraint=true
-parser.decoder.useOnlyGivenTags=false
+parser.decoder.useOnlySuppliedTags=false
 parser.decoder.outputHeadLexicalizedLabels=false
 parser.decoder.useLocalProbabilityCache=false
 parser.decoder.localProbabilityCacheSize=50000
 parser.decoder.useHeadToParentMap=false
+parser.decoder.restorePrunedWords=false
 #
 #
 # settings specific to language package danbikel.parser.english
